tests/miniJava/pos/001310_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { while ( true ) if ( 0 ) { } else { } } }
