tests/miniJava/neg/003156_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java [ 0 ] class 0 ; } }
